Added collectibles Updated "game" localization Changed constants

--- a/android/assets/localization/game.properties
+++ b/android/assets/localization/game.properties
@@ -1,4 +1,10 @@
+blueGem=Blue Diamond
+collectible=Unidentified collectible
 continue=Continue game
 exit=Main menu
+greenGem=Green Diamond
 pause=Pause
+pinkGem=Pink Diamond
+purpleGem=Purple Diamond
+redGem=Red Diamond
 score=Score
