--- a/android/assets/localization/game_fi_FI.properties
+++ b/android/assets/localization/game_fi_FI.properties
@@ -1,4 +1,10 @@
+blueGem=Sininen dimandos
+collectible=Tuntematon esine
 continue=Jatka peli‰
 exit=P‰‰valikkoon
+greenGem=Vihre‰ dimandos
 pause=Tauko
+pinkGem=Pinkki dimandos
+purpleGem=Purppura dimandos
+redGem=Punainen dimandos
 score=Pisteet
