Updated map Added power-up management Added fuel consumption rate Updated localization Changed constants

--- a/android/assets/localization/game.properties
+++ b/android/assets/localization/game.properties
@@ -1,10 +1,16 @@
+bigFuel=Big Canister of Fuel
 blueGem=Blue Diamond
 collectible=Unidentified collectible
 continue=Continue game
 exit=Main menu
 greenGem=Green Diamond
+mediumFuel=Medium Canister of Fuel
 pause=Pause
 pinkGem=Pink Diamond
+pointMultiplier=Collectible Points Multiplier
 purpleGem=Purple Diamond
+radarPowerUp=Radar View Multiplier
 redGem=Red Diamond
 score=Score
+smallFuel=Small Canister of Fuel
+speedMultiplier=Speed Multiplier
