--- a/android/assets/localization/game_fi_FI.properties
+++ b/android/assets/localization/game_fi_FI.properties
@@ -1,10 +1,16 @@
+bigFuel=Iso bensakanisteri
 blueGem=Sininen dimandos
 collectible=Tuntematon esine
 continue=Jatka peli‰
 exit=P‰‰valikkoon
 greenGem=Vihre‰ dimandos
+mediumFuel=Keskikokoinen bensakanisteri
 pause=Tauko
 pinkGem=Pinkki dimandos
+pointMultiplier=Kerr‰tt‰vien pistekerroin
 purpleGem=Purppura dimandos
+radarPowerUp=Kartan n‰kyvyyskerroin
 redGem=Punainen dimandos
 score=Pisteet
+smallFuel=Pieni bensakanisteri
+speedMultiplier=Vauhdinnopeutuskerroin
