Added random items to map Moved debug info to toString() method Updated localization

--- a/android/assets/localization/game.properties
+++ b/android/assets/localization/game.properties
@@ -1,6 +1,6 @@
 bigFuel=Big Canister of Fuel
 blueGem=Blue Diamond
-collectible=Unidentified collectible
+collectible=Nothing
 continue=Continue game
 exit=Main menu
 greenGem=Green Diamond
