--- a/android/assets/localization/game_fi_FI.properties
+++ b/android/assets/localization/game_fi_FI.properties
@@ -1,6 +1,6 @@
 bigFuel=Iso bensakanisteri
 blueGem=Sininen dimandos
-collectible=Tuntematon esine
+collectible=Ei mit‰‰n
 continue=Jatka peli‰
 exit=P‰‰valikkoon
 greenGem=Vihre‰ dimandos
