Added recalibration button Fixed debug font disappearing Added accessor method to player

--- a/android/assets/localization/game.properties
+++ b/android/assets/localization/game.properties
@@ -10,6 +10,7 @@ pinkGem=Pink Diamond
 pointMultiplier=Collectible Points Multiplier
 purpleGem=Purple Diamond
 radarPowerUp=Radar View Multiplier
+recalibrate=Recalibrate
 redGem=Red Diamond
 score=Score
 smallFuel=Small Canister of Fuel
