--- a/android/assets/localization/game_fi_FI.properties
+++ b/android/assets/localization/game_fi_FI.properties
@@ -10,6 +10,7 @@ pinkGem=Pinkki dimandos
 pointMultiplier=Kerrättävien pistekerroin
 purpleGem=Purppura dimandos
 radarPowerUp=Kartan näkyvyyskerroin
+recalibrate=Kalibroi uudelleen
 redGem=Punainen dimandos
 score=Pisteet
 smallFuel=Pieni bensakanisteri
