Added drill speed reduction mechanic Added drill speed power-up to map (unique and random) Added player related constants Removed unused code

--- a/android/assets/localization/game.properties
+++ b/android/assets/localization/game.properties
@@ -2,6 +2,7 @@ bigFuel=Big Canister of Fuel
 blueGem=Blue Diamond
 collectible=Nothing
 continue=Continue game
+drillMultiplier=Drill Speed Multiplier
 exit=Main menu
 greenGem=Green Diamond
 mediumFuel=Medium Canister of Fuel
