--- a/android/assets/localization/game_fi_FI.properties
+++ b/android/assets/localization/game_fi_FI.properties
@@ -2,6 +2,7 @@ bigFuel=Iso bensakanisteri
 blueGem=Sininen dimandos
 collectible=Ei mit‰‰n
 continue=Jatka peli‰
+drillMultiplier=Porausnopeuden parantaja
 exit=P‰‰valikkoon
 greenGem=Vihre‰ dimandos
 mediumFuel=Keskikokoinen bensakanisteri
