Updated map layout

--- a/android/assets/localization/game.properties
+++ b/android/assets/localization/game.properties
@@ -2,17 +2,24 @@ bigFuel=Big Canister of Fuel
 blueGem=Blue Diamond
 collectible=Nothing
 continue=Continue game
-drillMultiplier=Drill Speed Multiplier
+drillBoost=Drill Speed Multiplier
 exit=Main menu
 greenGem=Green Diamond
+armorBoost=Health Boost
 mediumFuel=Medium Canister of Fuel
+mineralBronze=Bronze
+mineralCoal=Coal
+mineralGold=Gold
+mineralSilver=Silver
 pause=Pause
 pinkGem=Pink Diamond
-pointMultiplier=Collectible Points Multiplier
+pointBoost=Collectible Points Multiplier
 purpleGem=Purple Diamond
-radarPowerUp=Radar View Multiplier
+radarBoost=Radar View Multiplier
+randomFuel=Random amount of fuel
 recalibrate=Recalibrate
 redGem=Red Diamond
 score=Score
 smallFuel=Small Canister of Fuel
-speedMultiplier=Speed Multiplier
+speedBoost=Speed Multiplier
+tealGem=Teal Diamond
