--- a/android/assets/localization/game_fi_FI.properties
+++ b/android/assets/localization/game_fi_FI.properties
@@ -1,18 +1,25 @@
 bigFuel=Iso bensakanisteri
-blueGem=Sininen dimandos
+blueGem=Sininen timantti
 collectible=Ei mit‰‰n
 continue=Jatka peli‰
-drillMultiplier=Porausnopeuden parantaja
+drillBoost=Porausnopeuden parantaja
 exit=P‰‰valikkoon
-greenGem=Vihre‰ dimandos
+greenGem=Vihre‰ timantti
+armorBoost=Panssarin korjaus
 mediumFuel=Keskikokoinen bensakanisteri
+mineralBronze=Pronssi
+mineralCoal=Kivihiili
+mineralGold=Kulta
+mineralSilver=Hopea
 pause=Tauko
-pinkGem=Pinkki dimandos
-pointMultiplier=Kerr‰tt‰vien pistekerroin
-purpleGem=Purppura dimandos
-radarPowerUp=Kartan n‰kyvyyskerroin
+pinkGem=Vaaleanpunainen timantti
+pointBoost=Kerr‰tt‰vien pistekerroin
+purpleGem=Purppura timantti
+radarBoost=Kartan n‰kyvyyskerroin
+randomFuel=Satunnainen m‰‰r‰ polttoainetta
 recalibrate=Kalibroi uudelleen
-redGem=Punainen dimandos
+redGem=Punainen timantti
 score=Pisteet
 smallFuel=Pieni bensakanisteri
-speedMultiplier=Vauhdinnopeutuskerroin
+speedBoost=Vauhdinnopeutuskerroin
+tealGem=Sinivihre‰ timantti
