Fixed calibration menu exit event Added localization for "settings" in pause menu

--- a/android/assets/localization/game.properties
+++ b/android/assets/localization/game.properties
@@ -17,7 +17,7 @@ pointBoost=Collectible Points Multiplier
 purpleGem=Purple Diamond
 radarBoost=Radar View Multiplier
 randomFuel=Random amount of fuel
-recalibrate=Recalibrate
+settings=Settings
 redGem=Red Diamond
 score=Score
 smallFuel=Small Canister of Fuel
