--- a/android/assets/localization/game_fi_FI.properties
+++ b/android/assets/localization/game_fi_FI.properties
@@ -17,7 +17,7 @@ pointBoost=Kerr‰tt‰vien pistekerroin
 purpleGem=Purppura timantti
 radarBoost=Kartan n‰kyvyyskerroin
 randomFuel=Satunnainen m‰‰r‰ polttoainetta
-recalibrate=Kalibroi uudelleen
+settings=Asetukset
 redGem=Punainen timantti
 score=Pisteet
 smallFuel=Pieni bensakanisteri
