Added game timer Updated BaseScreen

--- a/android/assets/localization/menu.properties
+++ b/android/assets/localization/menu.properties
@@ -1,4 +1,13 @@
-play=PLAY
-settings=SETTINGS
-highScore=HIGH SCORES
-exit=EXIT GAME
+menu_play=PLAY
+menu_settings=SETTINGS
+menu_highScore=HIGH SCORES
+menu_exit=EXIT GAME
+menu_calibrate=Calibrate
+pause_continue=Continue
+pause_title=Paused
+pause_restartLevel=Restart level
+pause_settings=Settings
+pause_exit=Exit to Main Menu
+game_score=Score
+menu_gameXR=Using Exerium GameXR
+menu_difficulty=Use difficulty settings
