--- a/android/assets/localization/menu_fi_FI.properties
+++ b/android/assets/localization/menu_fi_FI.properties
@@ -1,4 +1,13 @@
-play=PELAA
-settings=ASETUKSET
-highScore=PISTEET
-exit=LOPETA
+game_score=Pisteet
+pause_title=Tauko
+pause_restartLevel=Aloita kent‰‰ alusta
+pause_exit=Takaisin p‰‰valikkoon
+pause_settings=Asetukset
+pause_continue=Jatka peli‰
+menu_play=PELAA
+menu_settings=ASETUKSET
+menu_highScore=PISTEET
+menu_exit=LOPETA
+menu_calibrate=S‰‰d‰ ohjausherkkyytt‰
+menu_gameXR=Exerium GameXR -pelituoli
+menu_difficulty=K‰yt‰ vaikeustasoja
