Added unlimited fuel power-up Changed shroud tile color Updated localization

--- a/android/assets/localization/game.properties
+++ b/android/assets/localization/game.properties
@@ -13,7 +13,7 @@ pinkGem=Pink Diamond
 pointBoost=Collectible Points Multiplier
 purpleGem=Purple Diamond
 radarBoost=Radar View Multiplier
-randomFuel=Random amount of fuel
+fuelBoost=Unlimited fuel
 redGem=Red Diamond
 smallFuel=Small Canister of Fuel
 speedBoost=Speed Multiplier
