--- a/android/assets/localization/game_fi_FI.properties
+++ b/android/assets/localization/game_fi_FI.properties
@@ -13,7 +13,7 @@ pinkGem=Vaaleanpunainen timantti
 pointBoost=Kerr‰tt‰vien pistekerroin
 purpleGem=Purppura timantti
 radarBoost=Kartan n‰kyvyyskerroin
-randomFuel=Satunnainen m‰‰r‰ polttoainetta
+fuelBoost=Loputon polttoaine
 redGem=Punainen timantti
 smallFuel=Pieni bensakanisteri
 speedBoost=Vauhdinnopeutuskerroin
