Fixed rotation glitches Changed shroud tiles

--- a/android/assets/localization/menu.properties
+++ b/android/assets/localization/menu.properties
@@ -11,3 +11,4 @@ pause_exit=Exit to Main Menu
 game_score=Score
 menu_gameXR=Using Exerium GameXR
 menu_difficulty=Use difficulty settings
+game_nextLevel=Next level
