--- a/android/assets/localization/menu_fi_FI.properties
+++ b/android/assets/localization/menu_fi_FI.properties
@@ -11,3 +11,4 @@ menu_exit=LOPETA
 menu_calibrate=S‰‰d‰ ohjausherkkyytt‰
 menu_gameXR=Exerium GameXR -pelituoli
 menu_difficulty=K‰yt‰ vaikeustasoja
+game_nextLevel=Seuraava taso
