Changed level data Updated localization

--- a/android/assets/localization/game.properties
+++ b/android/assets/localization/game.properties
@@ -1,20 +1,22 @@
-bigFuel=Big Canister of Fuel
+bigFuel=Full tank refill
 blueGem=Blue Diamond
 collectible=Nothing
 drillBoost=Drill Speed Multiplier
 greenGem=Green Diamond
-armorBoost=Health Boost
-mediumFuel=Medium Canister of Fuel
+mediumFuel=Half tank refill
 mineralBronze=Bronze
 mineralCoal=Coal
 mineralGold=Gold
 mineralSilver=Silver
+mineralUranium=Uranium
 pinkGem=Pink Diamond
 pointBoost=Collectible Points Multiplier
 purpleGem=Purple Diamond
 radarBoost=Radar View Multiplier
 fuelBoost=Unlimited fuel
 redGem=Red Diamond
-smallFuel=Small Canister of Fuel
+smallFuel=Small tank refill
 speedBoost=Speed Multiplier
-tealGem=Teal Diamond
+crystalGem=Crystal
+rainbowGem=Rainbow Diamond
+topazGem=Topaz
