--- a/android/assets/localization/game_fi_FI.properties
+++ b/android/assets/localization/game_fi_FI.properties
@@ -3,12 +3,12 @@ blueGem=Sininen timantti
 collectible=Ei mit‰‰n
 drillBoost=Porausnopeuden parantaja
 greenGem=Vihre‰ timantti
-armorBoost=Panssarin korjaus
 mediumFuel=Keskikokoinen bensakanisteri
 mineralBronze=Pronssi
 mineralCoal=Kivihiili
 mineralGold=Kulta
 mineralSilver=Hopea
+mineralUranium=Uraani
 pinkGem=Vaaleanpunainen timantti
 pointBoost=Kerr‰tt‰vien pistekerroin
 purpleGem=Purppura timantti
@@ -17,4 +17,6 @@ fuelBoost=Loputon polttoaine
 redGem=Punainen timantti
 smallFuel=Pieni bensakanisteri
 speedBoost=Vauhdinnopeutuskerroin
-tealGem=Sinivihre‰ timantti
+crystalGem=Kristalli
+rainbowGem=Sateenkaaritimantti
+topazGem=Topaasi
