Updated localization and menus

--- a/android/assets/localization/menu.properties
+++ b/android/assets/localization/menu.properties
@@ -1,14 +1,10 @@
-menu_play=PLAY
-menu_settings=SETTINGS
-menu_highScore=HIGH SCORES
-menu_exit=EXIT GAME
-menu_calibrate=Calibrate
-pause_continue=Continue
-pause_title=Paused
-pause_restartLevel=Restart level
-pause_settings=Settings
-pause_exit=Exit to Main Menu
-game_score=Score
-menu_gameXR=Using Exerium GameXR
-menu_difficulty=Use difficulty settings
-game_nextLevel=Next level
+continue=button7_eng
+language=lang_eng
+next_small=button8_eng
+play=button1_eng
+quit=button3_eng
+restart_small=button8_eng
+return_small=button6_eng
+scores=button2_eng
+settings=button4_eng
+settings_small=button5_eng
