--- a/android/assets/localization/menu_fi_FI.properties
+++ b/android/assets/localization/menu_fi_FI.properties
@@ -1,14 +1,10 @@
-game_score=Pisteet
-pause_title=Tauko
-pause_restartLevel=Aloita kent‰‰ alusta
-pause_exit=Takaisin p‰‰valikkoon
-pause_settings=Asetukset
-pause_continue=Jatka peli‰
-menu_play=PELAA
-menu_settings=ASETUKSET
-menu_highScore=PISTEET
-menu_exit=LOPETA
-menu_calibrate=S‰‰d‰ ohjausherkkyytt‰
-menu_gameXR=Exerium GameXR -pelituoli
-menu_difficulty=K‰yt‰ vaikeustasoja
-game_nextLevel=Seuraava taso
+continue=button7_fin
+language=lang_fin
+next_small=button8_fin
+play=button1_fin
+quit=button3_fin
+restart_small=button8_fin
+return_small=button6_fin
+scores=button2_fin
+settings=button4_fin
+settings_small=button5_fin
