Added placeholder background music Updated menu behaviour and localization Removed unused files

--- a/android/assets/localization/menu.properties
+++ b/android/assets/localization/menu.properties
@@ -1,3 +1,4 @@
+calibrate=button9_eng
 continue_small=button7_eng
 language=lang_eng
 next_small=button8_eng
@@ -8,3 +9,4 @@ return_small=button6_eng
 scores=button2_eng
 settings=button4_eng
 settings_small=button5_eng
+swappedLocale=fi-FI
