--- a/android/assets/localization/menu_fi_FI.properties
+++ b/android/assets/localization/menu_fi_FI.properties
@@ -1,3 +1,4 @@
+calibrate=button9_fin
 continue_small=button7_fin
 language=lang_fin
 next_small=button8_fin
@@ -8,3 +9,4 @@ return_small=button6_fin
 scores=button2_fin
 settings=button4_fin
 settings_small=button5_fin
+swappedLocale=en-US
