Fixed menu interactions

--- a/android/assets/localization/menu.properties
+++ b/android/assets/localization/menu.properties
@@ -9,4 +9,4 @@ return_small=button6_eng
 scores=button2_eng
 settings=button4_eng
 settings_small=button5_eng
-swappedLocale=fi-FI
+swappedLocale=fi
