--- a/android/assets/localization/menu_fi_FI.properties
+++ b/android/assets/localization/menu_fi_FI.properties
@@ -9,4 +9,4 @@ return_small=button6_fin
 scores=button2_fin
 settings=button4_fin
 settings_small=button5_fin
-swappedLocale=en-US
+swappedLocale=en
