Updated in-game menus

--- a/android/assets/localization/menu.properties
+++ b/android/assets/localization/menu.properties
@@ -1,12 +1,12 @@
-calibrate=button9_eng
-continue_small=button7_eng
+calibrate=calibrationbutton_eng
+continueGame=continuegamebutton_eng
 language=lang_eng
-next_small=button8_eng
-play=button1_eng
-quit=button3_eng
-restart_small=button13_eng
-return_small=button6_eng
-scores=button2_eng
-settings=button4_eng
-settings_small=button5_eng
+nextMenu=nextlevelbutton_levelcompletescreen_eng
+playMenu=playbutton_eng
+quitMenu=quitbutton_eng
+restartGame=restartlevel_pausemenu_eng
+backButtonGame=backtomenubutton_pausemenu_eng
+scoresMenu=highscorebutton_eng
+settingsMenu=settingsbutton_eng
+settingsGame=settingsbutton_pausemenu_eng
 swappedLocale=fi
