--- a/android/assets/localization/menu_fi_FI.properties
+++ b/android/assets/localization/menu_fi_FI.properties
@@ -1,12 +1,12 @@
-calibrate=button9_fin
-continue_small=button7_fin
+calibrate=calibrationbutton_fin
+continueGame=continuegamebutton_fin
 language=lang_fin
-next_small=button8_fin
-play=button1_fin
-quit=button3_fin
-restart_small=button13_fin
-return_small=button6_fin
-scores=button2_fin
-settings=button4_fin
-settings_small=button5_fin
+nextMenu=nextlevelbutton_levelcompletescreen_fin
+playMenu=playbutton_fin
+quitMenu=quitbutton_fin
+restartGame=restartlevel_pausemenu_fin
+backButtonGame=backtomenubutton_pausemenu_fin
+scoresMenu=highscorebutton_fin
+settingsMenu=settingsbutton_fin
+settingsGame=settingsbutton_pausemenu_fin
 swappedLocale=en
