Updated SettingScreen layout Updated engine sound Other changes

--- a/android/assets/localization/menu.properties
+++ b/android/assets/localization/menu.properties
@@ -9,4 +9,7 @@ backButtonGame=backtomenubutton_pausemenu_eng
 scoresMenu=highscorebutton_eng
 settingsMenu=settingsbutton_eng
 settingsGame=settingsbutton_pausemenu_eng
+settingsTitle=settingstitle_eng
+soundVolumeTitle=SFX VOLUME: %.0f
+musicVolumeTitle=MUSIC VOLUME: %.0f
 swappedLocale=fi
