--- a/android/assets/localization/menu_fi_FI.properties
+++ b/android/assets/localization/menu_fi_FI.properties
@@ -9,4 +9,7 @@ backButtonGame=backtomenubutton_pausemenu_fin
 scoresMenu=highscorebutton_fin
 settingsMenu=settingsbutton_fin
 settingsGame=settingsbutton_pausemenu_fin
+settingsTitle=settingstitle_fin
+soundVolumeTitle=EFFEKTIEN VOIMAKKUUS: %.0f
+musicVolumeTitle=MUSIIKIN VOIMAKKUUS: %.0f
 swappedLocale=en
