Updated LevelSelectionScreen Updated localization

--- a/android/assets/localization/menu.properties
+++ b/android/assets/localization/menu.properties
@@ -4,12 +4,15 @@ language=lang_eng
 nextMenu=nextlevelbutton_levelcompletescreen_eng
 playMenu=playbutton_eng
 quitMenu=quitbutton_eng
+backButton=backbutton_eng
 restartGame=restartlevel_pausemenu_eng
+restartLevel=restartbutton_levelcompletescreen_eng
 backButtonGame=backtomenubutton_pausemenu_eng
 scoresMenu=highscorebutton_eng
 settingsMenu=settingsbutton_eng
 settingsGame=settingsbutton_pausemenu_eng
 settingsTitle=settingstitle_eng
+levelSelectTitle=levelselecttitle_eng
 soundVolumeTitle=SFX VOLUME: %.0f
 musicVolumeTitle=MUSIC VOLUME: %.0f
 swappedLocale=fi
