--- a/android/assets/localization/menu_fi_FI.properties
+++ b/android/assets/localization/menu_fi_FI.properties
@@ -4,12 +4,15 @@ language=lang_fin
 nextMenu=nextlevelbutton_levelcompletescreen_fin
 playMenu=playbutton_fin
 quitMenu=quitbutton_fin
+backButton=backbutton_fin
 restartGame=restartlevel_pausemenu_fin
+restartLevel=restartbutton_levelcompletescreen_fin
 backButtonGame=backtomenubutton_pausemenu_fin
 scoresMenu=highscorebutton_fin
 settingsMenu=settingsbutton_fin
 settingsGame=settingsbutton_pausemenu_fin
 settingsTitle=settingstitle_fin
+levelSelectTitle=levelselecttitle_fin
 soundVolumeTitle=EFFEKTIEN VOIMAKKUUS: %.0f
 musicVolumeTitle=MUSIIKIN VOIMAKKUUS: %.0f
 swappedLocale=en
