Updated all assets to use AssetManager

--- a/android/assets/localization/menu_fi_FI.properties
+++ b/android/assets/localization/menu_fi_FI.properties
@@ -13,6 +13,6 @@ settingsMenu=settingsbutton_fin
 settingsGame=settingsbutton_pausemenu_fin
 settingsTitle=settingstitle_fin
 levelSelectTitle=levelselecttitle_fin
-soundVolumeTitle=EFFEKTIEN VOIMAKKUUS: %.0f
+soundVolumeTitle=ÄÄNENVOIMAKKUUS: %.0f
 musicVolumeTitle=MUSIIKIN VOIMAKKUUS: %.0f
 swappedLocale=en
