Updated level layout and made loading lighter

--- a/android/assets/localization/menu_fi_FI.properties
+++ b/android/assets/localization/menu_fi_FI.properties
@@ -13,6 +13,7 @@ settingsMenu=settingsbutton_fin
 settingsGame=settingsbutton_pausemenu_fin
 settingsTitle=settingstitle_fin
 levelSelectTitle=levelselecttitle_fin
+pausedTitle=pausetitle_fin
 soundVolumeTitle=ÄÄNENVOIMAKKUUS: %.0f
 musicVolumeTitle=MUSIIKIN VOIMAKKUUS: %.0f
 swappedLocale=en
