--- a/android/assets/localization/menu.properties
+++ b/android/assets/localization/menu.properties
@@ -13,6 +13,7 @@ settingsMenu=settingsbutton_eng
 settingsGame=settingsbutton_pausemenu_eng
 settingsTitle=settingstitle_eng
 levelSelectTitle=levelselecttitle_eng
+pausedTitle=pausetitle_eng
 soundVolumeTitle=SFX VOLUME: %.0f
 musicVolumeTitle=MUSIC VOLUME: %.0f
 swappedLocale=fi
