Fixed level 1 visibility issues Added localization to EndScreen and CalibrationScreen

--- a/android/assets/localization/menu.properties
+++ b/android/assets/localization/menu.properties
@@ -16,4 +16,13 @@ levelSelectTitle=levelselecttitle_eng
 pausedTitle=pausetitle_eng
 soundVolumeTitle=SFX VOLUME: %.0f
 musicVolumeTitle=MUSIC VOLUME: %.0f
+maxDepthTitle=MAXIMUM DEPTH: %.0f
+totalTimeTitle=TOTAL TIME: %02d:%02d:%02d
+totalScoreTitle=TOTAL SCORE: %d
+sensitivityDown=SENSITIVITY (DOWN): %.0f
+sensitivityUp=SENSITIVITY (UP): %.0f
+sensitivityLeft=SENSITIVITY (LEFT): %.0f
+sensitivityRight=SENSITIVITY (RIGHT): %.0f
+invertX=INVERT X-AXIS
+invertY=INVERT Y-AXIS
 swappedLocale=fi
