--- a/android/assets/localization/menu_fi_FI.properties
+++ b/android/assets/localization/menu_fi_FI.properties
@@ -16,4 +16,13 @@ levelSelectTitle=levelselecttitle_fin
 pausedTitle=pausetitle_fin
 soundVolumeTitle=ÄÄNENVOIMAKKUUS: %.0f
 musicVolumeTitle=MUSIIKIN VOIMAKKUUS: %.0f
+maxDepthTitle=SAAVUTETTU SYVYYS: %.0f
+totalTimeTitle=AIKA YHTEENSÄ: %02d:%02d:%02d
+totalScoreTitle=PISTEET YHTEENSÄ: %d
+sensitivityDown=HERKKYYS (ALAS): %.0f
+sensitivityUp=HERKKYYS (YLÖS): %.0f
+sensitivityLeft=HERKKYYS (VASEN): %.0f
+sensitivityRight=HERKKYYS (OIKEA): %.0f
+invertX=KÄÄNNÄ X-AKSELI
+invertY=KÄÄNNÄ Y-AKSELI
 swappedLocale=en
