Updated CalibrationScreen and SettingsScreen Fixed profiles

--- a/android/assets/localization/menu.properties
+++ b/android/assets/localization/menu.properties
@@ -13,6 +13,7 @@ settingsMenu=settingsbutton_eng
 settingsGame=settingsbutton_pausemenu_eng
 settingsTitle=settingstitle_eng
 levelSelectTitle=levelselecttitle_eng
+calibrateTitle=calibrationtitle_eng
 pausedTitle=pausetitle_eng
 soundVolumeTitle=SFX VOLUME: %.0f
 musicVolumeTitle=MUSIC VOLUME: %.0f
@@ -25,4 +26,6 @@ sensitivityLeft=SENSITIVITY (LEFT): %.0f
 sensitivityRight=SENSITIVITY (RIGHT): %.0f
 invertX=INVERT X-AXIS
 invertY=INVERT Y-AXIS
+newProfile profile
+profileName=Profile name
 swappedLocale=fi
