--- a/android/assets/localization/menu_fi_FI.properties
+++ b/android/assets/localization/menu_fi_FI.properties
@@ -13,6 +13,7 @@ settingsMenu=settingsbutton_fin
 settingsGame=settingsbutton_pausemenu_fin
 settingsTitle=settingstitle_fin
 levelSelectTitle=levelselecttitle_fin
+calibrateTitle=calibrationtitle_fin
 pausedTitle=pausetitle_fin
 soundVolumeTitle=ÄÄNENVOIMAKKUUS: %.0f
 musicVolumeTitle=MUSIIKIN VOIMAKKUUS: %.0f
@@ -25,4 +26,6 @@ sensitivityLeft=HERKKYYS (VASEN): %.0f
 sensitivityRight=HERKKYYS (OIKEA): %.0f
 invertX=KÄÄNNÄ X-AKSELI
 invertY=KÄÄNNÄ Y-AKSELI
+newProfile=Uusi profiili
+profileName=Profiilin nimi
 swappedLocale=en
