--- a/android/assets/localization/menu_fi_FI.properties
+++ b/android/assets/localization/menu_fi_FI.properties
@@ -27,3 +27,4 @@ invertX=KÄÄNNÄ X-AKSELI
 invertY=KÄÄNNÄ Y-AKSELI
 newProfile=Uusi profiili
 profileName=Profiilin nimi
+calibration=KALIBROIDAAN...
